--- a/src/SolidEdge.Community.AddIn/SolidEdge.Community.AddIn.csproj
+++ b/src/SolidEdge.Community.AddIn/SolidEdge.Community.AddIn.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>NET40</TargetFramework>
-    <Version>110.0.0</Version>
+    <Version>219.0.0</Version>
     <Authors>Jason Newell</Authors>
     <Company>Jason Newell</Company>
     <Description>Community provided package for developing Solid Edge AddIns.</Description>
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Interop.SolidEdge" Version="[110.0.0, 111.0.0)">
+    <PackageReference Include="Interop.SolidEdge" Version="219.0.0">
       <PrivateAssets>None</PrivateAssets>
     </PackageReference>
   </ItemGroup>
